# solfans

program/: Cargo.toml  README.md
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  props.rs  state.rs
solfans-app/: .prettierrc  package.json  tsconfig.json
solfans-app/pages/: index.tsx
solfans-app/src/assets/: walletStyles.css
solfans-app/src/components/AppHeader/: AppHeader.tsx  styled.ts
solfans-app/src/components/GridLayout/: GridLayout.tsx  styled.ts
solfans-app/src/components/Profile/: Profile.tsx  styled.ts
solfans-app/src/components/Profile/HeroContent/: HeroContent.tsx  styled.ts
solfans-app/src/components/Profile/HeroContent/SupportCreatorCustomHTML/: SupportCreatorCustomHTML.tsx  index.ts  styled.ts
solfans-app/src/components/Profile/Snapshot/: Snapshot.tsx  index.ts  styled.ts
solfans-app/src/components/Profile/Streams/: Streams.tsx  index.ts  styled.ts
solfans-app/src/components/SVGs/Heart/: Heart.tsx
solfans-app/src/components/UI/DangerousText/: DangerousText.tsx  index.ts  styled.ts
solfans-app/src/components/UI/Heading/: Heading.tsx
solfans-app/src/components/UI/SweetAlerts/: index.tsx
solfans-app/src/components/UI/Text/: Text.tsx  styled.ts  types.ts
solfans-app/src/config/: theme.ts
solfans-app/src/pages/: _app.tsx  _document.tsx
solfans-app/src/pages-lib/Home/: Home.tsx  styled.ts
solfans-app/src/services/api/config/: endpoints.ts  http.ts  queryConfig.ts
solfans-app/src/types/: styled.d.ts
solfans-app/src/utils/: numberWithCommas.ts  subscribe.ts
solfans-app/utils/: subscribe.ts
